--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,9 +4,31 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="/css/style.css">
 	<title>Thoughts</title>
 </head>
 <body>
+	<nav id="navbar">
+		<a href="/" id="logo"><img src="/img/logo.png" alt="logo pensador"></a>
+		<ul>
+			<li>
+				<a href="/">Pensamentos</a>
+			</li>
+			<li>
+				<a href="/login">Entrar</a>
+			</li>
+			<li>
+				<a href="/register">Registrar</a>
+			</li>
+		</ul>
+	</nav>
 
+	<div class="container">
+		{{{ body }}}
+	</div>
+
+	<footer>
+		<p><span>pensadores</span>&copy;2023</p>
+	</footer>
 </body>
 </html>
