--- a/views/auth/login.handlebars
+++ b/views/auth/login.handlebars
@@ -1,6 +1,6 @@
 <section class="auth-container">
 	<h2>Entrar</h2>
-	<form action="/login">
+	<form action="/login" method="post">
 		<section class="form-control">
 			<label for="email">Email:</label>
 			<input type="email" name="email" placeholder="Digite o seu email">
