editar e atualizar finalizados

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -124,3 +124,177 @@ footer span{
 	background-color: var(--blue);
 	color: var(--white);
 }
+.thoughts-form-container{
+	width: 30%;
+	margin: auto;
+}
+.thoughts-form-container h2{
+	font-size: 30px;
+	margin-bottom: 1rem;
+	padding-left: 1rem;
+	border-left: 6px solid var(--blue);
+}
+.thoughts-form-container form{
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+}
+.thoughts-form-container form .form-control{
+	display: flex;
+	flex-direction: column;
+	width: 100%;
+	gap: 5px;
+}
+.thoughts-form-container form .form-control input{
+	height: 44px;
+	border: 1px solid var(--white);
+	padding: 0.5rem;
+	outline: none;
+	transition: .25s;
+}
+.thoughts-form-container form .form-control input:focus{
+	border-color: var(--blue);
+}
+.thoughts-form-container form a{
+	text-decoration: underline;
+	color: var(--blue);
+}
+.thoughts-form-container form .form-control label{
+	font-size: 16px;
+	font-weight: bold;
+}
+.thoughts-form-container form input[type="submit"]{
+	background-color: transparent;
+	border: 2px solid var(--blue);
+	padding: .5rem;
+	width: 40%;
+	color: var(--blue);
+	font-weight: bold;
+	font-size: 20px;
+	cursor: pointer;
+	transition: .5s;
+}
+.thoughts-form-container form input[type="submit"]:hover{
+	background-color: var(--blue);
+	color: var(--white);
+}
+.dashboard{
+	width: 75vw;
+	margin: auto;
+}
+.dashboard .title-container{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	margin: 1rem;
+	margin-bottom: 2rem;
+}
+.dashboard .title-container h2{
+	font-size: 30px;
+	padding-left: 1rem;
+	border-left: 6px solid var(--blue);
+}
+.dashboard .title-container .btn{
+	background-color: transparent;
+	border: 2px solid var(--blue);
+	padding: 10px;
+	text-decoration: none;
+	color: var(--blue);
+	font-weight: bold;
+	font-size: 20px;
+	cursor: pointer;
+	transition: .25s;
+}
+.dashboard .title-container .btn:hover{
+	background-color: var(--blue);
+	color: var(--white);
+}
+.dashboard ul{
+	list-style: none;
+}
+.dashboard ul li{
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 1rem 1rem .5rem;
+	border-bottom: 2px solid var(--blue);
+}
+.dashboard ul li p{
+	color: var(--blue);
+	font-size: 25px;
+	font-weight: bold;
+}
+.actions{
+	display: flex;
+	gap: 1rem;
+	width: 20%;
+}
+.actions form{
+	width: 50%;
+}
+.actions form input[type="submit"]{
+	border: 2px solid var(--blue);
+	padding: 10px 20px;
+	width: 100%;
+	color: var(--blue);
+	font-weight: bold;
+	font-size: 20px;
+	transition: .25s;
+	cursor: pointer;
+}
+.actions form input[type="submit"]:hover{
+	background-color: var(--blue);
+	color: var(--white);
+}
+.edit-container{
+	width: 30%;
+	margin: auto;
+}
+.edit-container h2{
+	font-size: 30px;
+	margin-bottom: 1rem;
+	padding-left: 1rem;
+	border-left: 6px solid var(--blue);
+}
+.edit-container form{
+	display: flex;
+	flex-direction: column;
+	gap: 15px;
+}
+.edit-container form input{
+	height: 44px;
+	border: 1px solid var(--white);
+	padding: 0.5rem;
+	outline: none;
+	transition: .25s;
+}
+.edit-container form input:focus{
+	border-color: var(--blue);
+}
+.edit-container form input[type="submit"]{
+	background-color: transparent;
+	border: 2px solid var(--blue);
+	padding: .5rem;
+	width: 40%;
+	color: var(--blue);
+	font-weight: bold;
+	font-size: 20px;
+	cursor: pointer;
+	transition: .5s;
+}
+.edit-container form input[type="submit"]:hover{
+	background-color: var(--blue);
+	color: var(--white);
+}
+.emptyThoughts{
+	text-align: center;
+	font-size: 20px;
+	margin-top: 2rem;
+}
+.emptyThoughts a{
+	color: var(--blue);
+	text-decoration: none;
+}
+.emptyThoughts a:hover{
+	text-decoration: underline;
+}
