tela de pensamentos completa

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -298,3 +298,83 @@ footer span{
 .emptyThoughts a:hover{
 	text-decoration: underline;
 }
+/* HOME */
+.home-header{
+	display: flex;
+	flex-direction: column;
+	max-width: 80%;
+	margin: 0 auto;
+	text-align: center;
+}
+.home-header h1{
+	margin-bottom: 1rem;
+}
+.home-header a{
+	color: var(--white);
+}
+.home-header p, .home-header form{
+	margin-bottom: 1rem;
+}
+.home-header input{
+	border: none;
+	border-bottom: 1px solid var(--white);
+	padding: 0.5rem;
+	margin-right: 1rem;
+}
+.home-header input[type="text"]{
+	width: 70%;
+	font-size: 18px;
+}
+.home-header input::placeholder{
+	color: var(--white);
+}
+.home-header input[type="submit"]{
+	border: 2px solid var(--blue);
+	color: var(--blue);
+	font-size: 20px;
+	padding: 0.5rem 3rem;
+
+}
+.order-container{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	max-width: 70%;
+	margin: 0 auto 1rem;
+
+}
+.order-container form{
+	margin: 0;
+}
+.order-container button{
+	margin-bottom: 0;
+	border: none;
+	cursor: pointer;
+}
+.order-container i{
+	color: var(--blue);
+	margin-right: 0;
+}
+.order-container button:hover,
+.order-container a:hover{
+	color: var(--blue);
+}
+.order-container button,
+.order-container a{
+	margin: 0 15px;
+	font-size: 18px;
+}
+.thoughts-container figure{
+	border-bottom: 2px solid #333;
+	padding: .5rem;
+	max-width: 65%;
+	margin: 0 auto 1rem;
+}
+.thoughts-container blockquote{
+	font-size: italic;
+	font-size: 2rem;
+	margin-bottom: .4rem;
+}
+.thoughts-container span{
+	color: var(--blue);
+}
